plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'com.diffplug.spotless' version '6.18.0'
}

group = 'com.klindziuk'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '20'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

allprojects { project ->
	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'com.diffplug.spotless'

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-webflux'
		implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0'
     	compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'io.projectreactor:reactor-test'

		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
	}

	spotless {
		format 'misc', {
			target '*.gradle', '*.md', '.gitignore'
			trimTrailingWhitespace()
			endWithNewline()
		}
		java {
			googleJavaFormat('1.16.0').reflowLongStrings()
			formatAnnotations()
			removeUnusedImports()
			licenseHeader '/*\n * Copyright (c) Dandelion development.\n */\n\n'
		}

		tasks.named('test') {
			useJUnitPlatform()
		}

		tasks.withType(JavaCompile) {
			options.compilerArgs += "--enable-preview"
		}

		tasks.withType(JavaExec) {
			jvmArgs += "--enable-preview"
		}

		bootBuildImage {
			builder = 'paketobuildpacks/builder:tiny'
			imageName = "${project.name}:${version}"
		}
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
	options.compilerArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
	jvmArgs += "--enable-preview"
}

bootBuildImage {
	builder = 'paketobuildpacks/builder:tiny'
	imageName = "${project.name}:${version}"
}

bootJar {
	enabled = false
}

jar {
	enabled = false
}

bootBuildImage.enabled = false
